<resources>
    <string name="app_name">AdoptMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">adoptMe</string>
    <string name="nav_header_subtitle">Show me that life is still worth</string>
    <string name="nav_header_desc">Profile Image</string>
    <string name="action_settings">Settings</string>
    <string name="profile_name">Vorname Nachname</string>
    <string name="profile_content">Profile</string>

    <string name="menu_home">Home</string>
    <string name="brand">adoptMe</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">For- and Surname</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="action_register_short">Sign up</string>
    <string name="slogan">Show me \n that life is still worth</string>
    <string name="register_text">Register and show me \n that life is still worth</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_name">Not a valid for- and surname</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be > 6 characters</string>
    <string name="not_same_password">Passwords must be the same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginbrandlogo">loginBrandLogo</string>
    <string name="register_now">register now</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="something_went_wrong">"Something went wrong"</string>
    <string name="facebook_login">CONTINUE WITH FACEBOOK</string>
    <string name="facebook_login_short">CONTINUE WITH</string>
    <string name="or">or</string>
    <string name="signin_google">SIGN IN WITH GOOGLE</string>
    <string name="signin_google_short">SIGN IN WITH</string>
    <string name="signup_google_short">SIGN UP</string>
    <string name="default_web_client_id">166227964131-ljrf2vgbdig11b52qi8egc2p85c3lai1.apps.googleusercontent.com</string>
    <string name="user_not_found">The User is not found</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="plain_logo_desc">plain logo</string>
    <string name="heart_logo_desc">heart logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
</resources>