<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerContainer"
    android:background="@color/brandPurple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.register.RegisterFragment">

    <LinearLayout
        android:id="@+id/verticalRegisterLayout"
        android:background="@color/brandPurple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="-14dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/register_text"
            android:textColor="@color/brandGold"
            android:textAlignment="center"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_username"
            android:backgroundTint="@color/brandOrange"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/brandGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_email"
            android:backgroundTint="@color/brandOrange"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/brandGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/username"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:minHeight="48dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/brandGrey"
            android:backgroundTint="@color/brandOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email"/>

        <EditText
            android:id="@+id/repeatedPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:minHeight="48dp"
            android:autofillHints="@string/prompt_repeat_password"
            android:hint="@string/prompt_repeat_password"
            android:imeActionLabel="@string/action_register_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/brandGrey"
            android:backgroundTint="@color/brandOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/action_register"
            android:textColor="@color/brandPurple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/verticalLoginLayout"
            app:layout_constraintStart_toStartOf="@+id/verticalLoginLayout"
            app:layout_constraintTop_toBottomOf="@+id/repeatedPassword"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/registerLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/verticalRegisterLayout"
            app:layout_constraintEnd_toEndOf="@+id/register"
            app:layout_constraintStart_toStartOf="@+id/register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>